--- a/gopnik.html
+++ b/gopnik.html
@@ -17,49 +17,6 @@
     </div>
   </div>
 
-  <!-- MAIN MENU (S&F style) -->
-  <div id="mainMenu" class="mainMenu" aria-hidden="true">
-    <div class="sfFrame">
-      <div class="sfTopBar">
-        <div class="sfLogo">
-          SLAV <span>CLICKER</span>
-        </div>
-
-        <div class="sfTopBtns">
-          <button id="mmBtnSettings" class="sfIconBtn" title="Nastavení">⚙️</button>
-          <button id="mmBtnClose" class="sfIconBtn" title="Zavřít">✖</button>
-        </div>
-      </div>
-
-      <div class="sfBody">
-        <aside class="sfNav">
-          <button id="mmPlay" class="sfBtn sfBtn--nav">▶ PLAY</button>
-          <button id="mmShop" class="sfBtn sfBtn--nav">🛒 SHOP</button>
-          <button id="mmUpgrades" class="sfBtn sfBtn--nav">⚔ UPGRADES</button>
-          <button id="mmPrestige" class="sfBtn sfBtn--nav">👑 PRESTIGE</button>
-        </aside>
-
-        <main class="sfPreview">
-          <div class="sfPreviewBox">
-            <div class="sfPreviewTitle">WELCOME, BRAT.</div>
-            <div class="sfPreviewText">
-              Všechno se ukládá do <b>localStorage</b>.<br>
-              Klikni <b>PLAY</b> a jedeš.
-            </div>
-
-            <div class="sfPreviewHint">
-              (Tady později dáme artwork / charakter / animace.)
-            </div>
-          </div>
-        </main>
-      </div>
-
-      <div class="sfFooter">
-        World 1 • build v0.1
-      </div>
-    </div>
-  </div>
-
   <!-- AUDIO -->
   <audio id="clickSnd" src="click.mp3" preload="auto"></audio>
   <audio id="bgMusic" src="go.mp3" preload="auto" loop></audio>
@@ -92,7 +49,31 @@
   <!-- GAME -->
   <div class="wrap">
 
-    <!-- LEFT -->
+    <!-- S&F LEFT SIDEBAR -->
+    <aside class="sfSide">
+      <div class="sfSideTop">
+        <div class="sfSideLogo">SLAV <span>CLICKER</span></div>
+      </div>
+
+      <div class="sfSideStats">
+        <div class="sfStatLine"><span id="t_moneyLabel2">Peníze</span><b id="moneySide">0</b></div>
+        <div class="sfStatLine"><span id="t_cpcLabel2">Klik</span><b id="cpcSide">1</b></div>
+        <div class="sfStatLine"><span id="t_cpsLabel2">Sek</span><b id="cpsSide">0</b></div>
+      </div>
+
+      <div class="sfSideNav">
+        <button class="sfBtn sfBtn--nav" id="navPlay">▶ Play</button>
+        <button class="sfBtn sfBtn--nav" id="navShop">🛒 Shop</button>
+        <button class="sfBtn sfBtn--nav" id="navUpgrades">⚔ Upgrades</button>
+        <button class="sfBtn sfBtn--nav" id="navPrestige">👑 Prestige</button>
+      </div>
+
+      <div class="sfSideBottom">
+        <button class="sfIconBtn" id="navSettings" title="Nastavení">⚙️</button>
+      </div>
+    </aside>
+
+    <!-- MAIN AREA (character + click target) -->
     <div class="leftcol">
       <div class="logo">SLAV <span>CLICKER</span></div>
 
@@ -101,7 +82,7 @@
       </div>
     </div>
 
-    <!-- PANEL -->
+    <!-- RIGHT PANEL -->
     <div class="panel">
 
       <div class="panelTop">
