--- a/gopnik.html
+++ b/gopnik.html
@@ -49,23 +49,27 @@
   <!-- GAME -->
   <div class="wrap">
 
-    <!-- S&F LEFT SIDEBAR -->
+    <!-- LEFT SIDEBAR (S&F layout) -->
     <aside class="sfSide">
       <div class="sfSideTop">
         <div class="sfSideLogo">SLAV <span>CLICKER</span></div>
       </div>
 
-      <div class="sfSideStats">
-        <div class="sfStatLine"><span id="t_moneyLabel2">Peníze</span><b id="moneySide">0</b></div>
-        <div class="sfStatLine"><span id="t_cpcLabel2">Klik</span><b id="cpcSide">1</b></div>
-        <div class="sfStatLine"><span id="t_cpsLabel2">Sek</span><b id="cpsSide">0</b></div>
-      </div>
-
+      <!-- ✅ přesně 13 tlačítek, všechny TEST -->
       <div class="sfSideNav">
-        <button class="sfBtn sfBtn--nav" id="navPlay">▶ Play</button>
-        <button class="sfBtn sfBtn--nav" id="navShop">🛒 Shop</button>
-        <button class="sfBtn sfBtn--nav" id="navUpgrades">⚔ Upgrades</button>
-        <button class="sfBtn sfBtn--nav" id="navPrestige">👑 Prestige</button>
+        <button class="sfBtn sfBtn--nav" id="btnTest1">TEST</button>
+        <button class="sfBtn sfBtn--nav" id="btnTest2">TEST</button>
+        <button class="sfBtn sfBtn--nav" id="btnTest3">TEST</button>
+        <button class="sfBtn sfBtn--nav" id="btnTest4">TEST</button>
+        <button class="sfBtn sfBtn--nav" id="btnTest5">TEST</button>
+        <button class="sfBtn sfBtn--nav" id="btnTest6">TEST</button>
+        <button class="sfBtn sfBtn--nav" id="btnTest7">TEST</button>
+        <button class="sfBtn sfBtn--nav" id="btnTest8">TEST</button>
+        <button class="sfBtn sfBtn--nav" id="btnTest9">TEST</button>
+        <button class="sfBtn sfBtn--nav" id="btnTest10">TEST</button>
+        <button class="sfBtn sfBtn--nav" id="btnTest11">TEST</button>
+        <button class="sfBtn sfBtn--nav" id="btnTest12">TEST</button>
+        <button class="sfBtn sfBtn--nav" id="btnTest13">TEST</button>
       </div>
 
       <div class="sfSideBottom">
@@ -73,10 +77,8 @@
       </div>
     </aside>
 
-    <!-- MAIN AREA (character + click target) -->
+    <!-- MAIN AREA -->
     <div class="leftcol">
-      <div class="logo">SLAV <span>CLICKER</span></div>
-
       <div class="ring" id="gopnik">
         <img id="gopnikImg" src="gopnik_A.png" alt="gopnik">
       </div>
@@ -140,7 +142,6 @@
     </div>
   </div>
 
-  <!-- JS -->
   <script src="gopnik.js"></script>
 </body>
 </html>
