--- a/gopnik.html
+++ b/gopnik.html
@@ -26,7 +26,7 @@
     <div class="modalBox">
       <div class="modalHeader">
         <div id="t_settingsTitle" class="modalTitle">Nastavení</div>
-        <button id="btnCloseSettings" class="iconBtn" title="Zavřít">✖</button>
+        <button id="btnCloseSettings" class="iconBtn" title="Zavřít" aria-label="Zavřít">✖</button>
       </div>
 
       <div class="modalRow">
@@ -49,71 +49,95 @@
   <!-- GAME -->
   <div class="wrap">
 
-    <!-- LEFT SIDEBAR (S&F style) -->
+    <!-- LEFT SIDEBAR -->
     <aside class="sfSide">
 
-      <!-- TOP: avatar + currencies -->
+      <!-- TOP -->
       <div class="sfTop">
+
+        <!-- PLUS VPRAVO NAHOŘE (JAK NA OBRÁZKU) -->
+        <button class="sfPlusBtn skinBtn" id="btnPlus" title="Plus" aria-label="Plus">+</button>
+
         <div class="sfAvatarBox">
-          <img id="avatarImg" class="sfAvatar" src="avatar.jpg" alt="avatar"
-               onerror="this.style.display='none'; document.getElementById('avatarFallback').style.display='grid';">
+          <img
+            id="avatarImg"
+            class="sfAvatar"
+            src="avatar.jpg"
+            alt="avatar"
+            onerror="this.style.display='none'; document.getElementById('avatarFallback').style.display='grid';"
+          >
           <div id="avatarFallback" class="sfAvatarFallback" style="display:none;">🙂</div>
           <div class="sfLevelPill" id="sfLevel">1</div>
         </div>
 
         <div class="sfCurrencyCol">
           <div class="sfCurrencyLine">
-            <span class="sfCoinIcon" aria-hidden="true"></span>
+            <span class="sfCurIcon">₽</span>
             <b id="coins">0</b>
           </div>
           <div class="sfCurrencyLine">
-            <span class="sfMushIcon" aria-hidden="true"></span>
+            <span class="sfCurIcon">🚬</span>
             <b id="mushrooms">0</b>
           </div>
-          <button class="sfPlusBtn" id="btnPlus" title="Plus">+</button>
         </div>
       </div>
 
-      <!-- NAV BUTTONS -->
+      <!-- NAV -->
       <div class="sfNav">
-        <button class="sfNavBtn">TAVERN</button>
-        <button class="sfNavBtn">ARENA</button>
-        <button class="sfNavBtn">WEAPON SHOP</button>
-        <button class="sfNavBtn">MAGIC SHOP</button>
-        <button class="sfNavBtn">STABLE</button>
-        <button class="sfNavBtn">DUNGEONS</button>
-        <button class="sfNavBtn">FORTRESS</button>
+
+        <button
+          class="sfNavBtn skinNav"
+          data-icon="🍺"
+          onclick="window.location.href='postava.html'">
+          POSTAVA
+        </button>
+
+        <button
+  class="sfNavBtn skinNav"
+  data-icon="⚔️"
+  onclick="window.location.href='arena.html'">
+  ARENA
+</button>
+
+<button
+  class="sfNavBtn skinNav"
+  data-icon="🗡️"
+  onclick="window.location.href='shop.html'">
+  SHOP
+</button>
+
+        <button class="sfNavBtn skinNav" data-icon="🔮">MAGIC SHOP</button>
+        <button class="sfNavBtn skinNav" data-icon="🐴">STABLE</button>
 
         <div class="sfDivider"></div>
 
-        <button class="sfNavBtn">GUILD</button>
-        <button class="sfNavBtn">MAIL</button>
-        <button class="sfNavBtn">HALL OF FAME</button>
-        <button class="sfNavBtn">DR. ABAWUWU</button>
+        <button class="sfNavBtn skinNav" data-icon="👥">GUILD</button>
+        <button class="sfNavBtn skinNav" data-icon="✉️">MAIL</button>
+        <button class="sfNavBtn skinNav" data-icon="🏆">HALL OF FAME</button>
+        <button class="sfNavBtn skinNav" data-icon="🧙">DR. ABAWUWU</button>
+        <button class="sfNavBtn sfNavBtn--last skinNav" data-icon="🎮">SLAV CLICKER</button>
 
-        <!-- poslední -->
-        <button class="sfNavBtn sfNavBtn--last">SLAV CLICKER</button>
       </div>
 
-      <!-- BOTTOM: settings like on screenshot -->
+      <!-- BOTTOM -->
       <div class="sfBottom">
-        <button class="sfGearBtn" id="navSettings" title="Nastavení">⚙️</button>
+        <button class="sfGearBtn skinBtn" id="navSettings" title="Nastavení" aria-label="Nastavení">⚙️</button>
       </div>
 
     </aside>
 
-    <!-- MAIN AREA -->
+    <!-- MAIN -->
     <div class="leftcol">
       <div class="ring" id="gopnik">
         <img id="gopnikImg" src="gopnik_A.png" alt="gopnik">
       </div>
     </div>
 
-    <!-- RIGHT PANEL (ponechávám jak máš) -->
+    <!-- RIGHT PANEL -->
     <div class="panel">
 
       <div class="panelTop">
-        <button id="btnSettings" class="iconBtn" title="Nastavení">⚙️</button>
+        <button id="btnSettings" class="iconBtn skinBtn" title="Nastavení" aria-label="Nastavení">⚙️</button>
       </div>
 
       <h2 id="t_moneyTitle">PENÍZE</h2>
@@ -131,19 +155,19 @@
 
       <div class="item">
         <b id="t_itemCursor">Kurzor</b><br>
-        +0.1 / s<br>
-        <button id="buyCursor">Koupit (15)</button>
+        +0.2 / s<br>
+        <button id="buyCursor" class="skinBtn">Koupit (25)</button>
       </div>
 
       <div class="item">
         <b id="t_itemGranny">Babička</b><br>
-        +1 / s<br>
-        <button id="buyGranny">Koupit (100)</button>
+        +2 / s<br>
+        <button id="buyGranny" class="skinBtn">Koupit (150)</button>
       </div>
 
       <div class="item">
         <b id="t_itemClick">Síla kliku</b><br>
-        <button id="buyClick">Vylepšit (50)</button>
+        <button id="buyClick" class="skinBtn">Vylepšit (80)</button>
       </div>
 
       <h2 id="t_prestigeTitle" style="margin-top:15px">PRESTIGE</h2>
@@ -156,7 +180,9 @@
           <span id="t_gainLabel">Získáš při prestiži:</span> <b id="spGain">0</b>
         </div>
 
-        <button id="btnPrestige" class="prestigeBtn" disabled>Prestige (reset)</button>
+        <button id="btnPrestige" class="prestigeBtn skinBtn" disabled>
+          Prestige (reset)
+        </button>
 
         <small id="t_prestigeHint" class="prestigeHint">
           Resetuje peníze a upgradey, ale dá trvalý bonus.
