--- a/hry.html
+++ b/hry.html
@@ -658,7 +658,7 @@
     </div>
     <div class="admin-game-toggle">
     <span>🧢 Gopnik Clicker</span>
-    <button class="admin-toggle-btn active" data-game="gopnik" onclick="toggleGameStatus('gopnik')">AKTIVNÍ</button>
+    <button class="admin-toggle-btn active" data-game="gopnik" onclick="toggleGameStatus('loading')">AKTIVNÍ</button>
     </div>
 </div>
 
@@ -1253,6 +1253,7 @@ window.addEventListener('DOMContentLoaded', async function() {
 
 </body>
 </html>
+
 
 
 
