--- a/hry.html
+++ b/hry.html
@@ -835,7 +835,7 @@ function goHappyWheels() { window.location.href = "happy_wheels.html"; }
 function goHobo1() { window.location.href = "hobo1.html"; }
 function goHobo2() { window.location.href = "hobo2.html"; }
 function goHobo3() { window.location.href = "hobo3.html"; }    
-function goGopnik() { window.location.href = "gopnik.html"; }
+function goGopnik() { window.location.href = "postava.html"; }
 
 
 function showLogin() { document.getElementById("loginModal").style.display = "flex"; }
@@ -1253,6 +1253,7 @@ window.addEventListener('DOMContentLoaded', async function() {
 
 </body>
 </html>
+
 
 
 
