--- a/postava.html
+++ b/postava.html
@@ -7,6 +7,13 @@
 </head>
 <body>
 
+ // Anti-loop: pokud jsme sem přišli z loadingu, už nepřesměrovávej
+  if (sessionStorage.getItem("skipLoadingOnce") === "1") {
+    sessionStorage.removeItem("skipLoadingOnce");
+  } else {
+    window.location.replace("loading.html?next=postava.html");
+  }
+  
 <div class="layout">
 
   <!-- LEVÝ PANEL - GOPNIK STYL -->
@@ -136,4 +143,5 @@
 <script src="postava.js"></script>
 
 </body>
+
 </html>
