--- a/loading.html
+++ b/loading.html
@@ -246,7 +246,14 @@ body{
 <script>
 const params = new URLSearchParams(window.location.search);
 const NEXT_PAGE = params.get("next") || "postava.html";
-const frames = ["anim1.jpg","anim2.jpg","anim3.jpg"];
+const frames = [
+  "anim1.jpg",
+  "anim2.jpg",
+  "anim3.jpg",
+  "anim4.jpg",
+  "anim5.jpg"
+];
+
 
 // přesně 15 sekund celkem
 const TOTAL_TIME = 15000;
@@ -309,5 +316,6 @@ requestAnimationFrame(update);
 
 </body>
 </html>
+
 
 
