--- a/gopnik.html
+++ b/gopnik.html
@@ -9,14 +9,6 @@
 
 <body>
 
-  <!-- LOADING -->
-  <div id="loading">
-    <div class="loader">
-      <div class="title">SLAV CLICKER</div>
-      <div class="hint" id="t_startHint">klikni pro start</div>
-    </div>
-  </div>
-
   <!-- AUDIO -->
   <audio id="clickSnd" src="click.mp3" preload="auto"></audio>
   <audio id="bgMusic" src="go.mp3" preload="auto" loop></audio>
@@ -193,5 +185,28 @@
   </div>
 
   <script src="gopnik.js"></script>
+<script>
+const music = document.getElementById("bgMusic");
+
+if (localStorage.getItem("musicPlaying") === "true") {
+  music.currentTime = parseFloat(localStorage.getItem("musicTime")) || 0;
+  music.volume = 0.4;
+  music.play();
+}
+
+document.addEventListener("click", () => {
+  if (music.paused) {
+    music.play();
+    localStorage.setItem("musicPlaying", "true");
+  }
+}, { once: true });
+
+setInterval(() => {
+  if (!music.paused) {
+    localStorage.setItem("musicTime", music.currentTime);
+  }
+}, 500);
+</script>
+
 </body>
 </html>
