--- a/shop.html
+++ b/shop.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="shop.css">
 </head>
 <body>
+<audio id="bgMusic" src="go.mp3" loop preload="auto"></audio>
 
 <div class="layout">
 
@@ -289,6 +290,28 @@
 </div>
 
 <script src="shop.js"></script>
+<script>
+const music = document.getElementById("bgMusic");
+
+if (localStorage.getItem("musicPlaying") === "true") {
+  music.currentTime = parseFloat(localStorage.getItem("musicTime")) || 0;
+  music.volume = 0.4;
+  music.play();
+}
+
+document.addEventListener("click", () => {
+  if (music.paused) {
+    music.play();
+    localStorage.setItem("musicPlaying", "true");
+  }
+}, { once: true });
+
+setInterval(() => {
+  if (!music.paused) {
+    localStorage.setItem("musicTime", music.currentTime);
+  }
+}, 500);
+</script>
 
 </body>
 </html>
