--- a/loading.html
+++ b/loading.html
@@ -244,7 +244,7 @@ body{
 </div>
 
 <script>
-const NEXT_PAGE = "gopnik.html";
+const NEXT_PAGE = "postava.html";
 const frames = ["anim1.jpg","anim2.jpg","anim3.jpg","anim4.jpg","anim5.jpg"];
 
 // přesně 15 sekund celkem
@@ -337,3 +337,4 @@ requestAnimationFrame(update);
 
 </body>
 </html>
+
